--- a/css/screen.css
+++ b/css/screen.css
@@ -15,6 +15,10 @@ h1, h2, h3, h4, h5 {
   font-family: "Diavlo";
 }
 
+header, footer, nav, section, article {
+ display: block;
+}
+
 header {
   text-align: center;
 }
